feat: add mail configuration
